# Job

./: .env  .env.example  .gitignore  .venv  README.md  main.py  pyproject.toml  vazifa.md
agents/: matching_agent.py
config/: database.py
migrations/: 001_create_zaproslar.sql  002_create_malumotlar.sql  003_create_agent_takliflari.sql
models/: agent_taklif.py  malumot.py  zapros.py
services/: zapros_generator.py
tests/: test_agent.py
