[project]
name = "yuk-tashish-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "apscheduler>=3.10.0",
    "langchain-ollama>=0.2.0",
    "langgraph>=1.0.0",
    "pytest>=9.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: integration test requiring real PostgreSQL and Anthropic API",
]
